--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -136,6 +136,11 @@ body {
   border-color: #00b2a8;
 }
 
+.theme-green .bs-datepicker-body table td span.selected {
+  background-color: #00b2a8;
+  border-color: #00b2a8;
+}
+
 .hex-blue-color {
   background-color: #ebedf0;
 }
