--- a/frontend/src/app/components/claims/claims.component.html
+++ b/frontend/src/app/components/claims/claims.component.html
@@ -100,16 +100,13 @@
                 <i class="fa fa-balance-scale fa-2x" aria-hidden="true"></i>
                 <span class="badge color-aqua ">{{numeral}}</span>
               </mat-button-toggle>
-              <mat-button-toggle class="operation-type" (click)="addEventShow()" *ngIf="this.eventObjectId.length > 0"
-                                 [class]="'btn btn-sm btn-outline-dark clear-btn'" [disabled]="this.eventObjectId?.length>15">
+              <mat-button-toggle class="btn btn-sm btn-outline-dark clear-btn operation-type" (click)="addEventShow()" *ngIf="this.eventObjectId.length > 0" [disabled]="this.eventObjectId?.length>15">
                 Добавить на показ {{this.eventObjectId?.length}}
               </mat-button-toggle>
-              <mat-button-toggle class="operation-type" (click)="clearForm()"
-                                 [class]="'btn btn-sm btn-outline-dark clear-btn'">
+              <mat-button-toggle class="btn btn-sm btn-outline-dark clear-btn operation-type" (click)="clearForm()">
                 Очистить
               </mat-button-toggle>
-              <mat-button-toggle class="operation-type" (click)="findClaims(1)"
-                                 [class]="'btn btn-sm color-aqua text-white search-btn'">
+              <mat-button-toggle class="btn btn-sm color-aqua text-white search-btn operation-type" (click)="findClaims(1)">
                 <i aria-hidden="true" class="fa fa-search"></i>
                 Поиск
               </mat-button-toggle>
