--- a/frontend/src/app/components/claims/claims.component.html
+++ b/frontend/src/app/components/claims/claims.component.html
@@ -172,13 +172,12 @@
         <table class="table table-sm">
           <thead class="text-center border-0 hex-blue-color">
           <tr style="height: 60px">
-            <th></th>
+            <th *ngIf="eventCall"></th>
             <th>ID</th>
             <th>Операция</th>
             <th translate>claim.crDateFrom</th>
             <th translate>fio</th>
-            <th width="120px" translate>phone</th>
-            <th translate>e-mail</th>
+            <th width="120px" translate>Контакты</th>
             <th translate>Район</th>
             <th translate>Количество комнат</th>
             <th translate>Цена</th>
@@ -201,12 +200,14 @@
             <td>
               <a [routerLink]="['/create-claim-view/', claim?.id]">{{claim.id}}</a>
             </td>
-            <td class="text-aqua font-weight-bold">{{getDicNameByLanguage(claim, 'operationType')}}</td>
+            <td class="font-weight-bold" style="color: #00b2a8">{{getDicNameByLanguage(claim, 'operationType')}}</td>
             <td>{{formatDate(claim)}}</td>
             <td>{{claim.fullNameAgent}}</td>
-            <td width="120px"><span
-              *ngIf="claim.phoneNumberAgent">+7 {{claim.phoneNumberAgent | mask: '(000) 000-0000'}}</span></td>
-            <td>{{claim.emailAgent}}</td>
+            <td>
+              <span *ngIf="claim.phoneNumberAgent">+7 {{claim.phoneNumberAgent | mask: '(000) 000-0000'}}</span>
+              <br/>
+              <span class="font-weight-bolder">{{claim.emailAgent}}</span>
+            </td>
             <td>{{getDicNameByLanguage(claim, 'district')}}</td>
             <td>{{claim.numberOfRooms}}</td>
             <td>{{claim.price}}</td>
