--- a/frontend/src/app/components/claims/claims.component.scss
+++ b/frontend/src/app/components/claims/claims.component.scss
@@ -75,10 +75,9 @@ table thead {
   color: #858b93;
 }
 
-table tbody {
-  width: 149px;
-  height: 35px;
-  font-size: 16px;
+table tbody tr td {
+  height: 70px;
+  font-size: 14px;
   font-weight: 500;
   font-stretch: normal;
   font-style: normal;
