--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -163,7 +163,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm">
+      <div class="col-sm overflow-auto">
         <table class="table table-bordered table-sm">
           <thead class="text-center">
           <tr>
@@ -286,8 +286,8 @@
         </button>
       </div>
     </div>
-    <div class="row content-bundle" [ngClass]="{active: isActive}">
-      <table class="table table-bordered table-sm">
+    <div class="row content-bundle overflow-auto" [ngClass]="{active: isActive}" >
+      <table class="table table-bordered table-sm ">
         <thead class="text-center">
           <tr>
             <th>ID заявки</th>
