--- a/frontend/src/app/components/claims/create-claim/advance/advance.component.html
+++ b/frontend/src/app/components/claims/create-claim/advance/advance.component.html
@@ -1,4 +1,5 @@
-<div class="card">
+<div class="card"
+     *ngIf="this.actRoute.snapshot.queryParamMap.get('activeTab') == 'advanceAgreement' || this.actRoute.snapshot.queryParamMap.get('activeTab') == 'depositAgreement' ">
   <div class="card-body">
     <div class="contract-form" [formGroup]="contractForm">
       <div class="row">
