--- a/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.html
+++ b/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.html
@@ -84,9 +84,10 @@
               <label for="form7">Описание события</label>
               <textarea class="col-sm-12 control" rows="2" [(ngModel)]="events.description"></textarea>
             </div>
-            <div class="col-sm" *ngIf="events?.eventType?.id == 1" [class.disabledDev]="events.disabledDev">
-              <label for="form7">ID заявки - {{events?.targetApplicationId}}</label>
-              <textarea class="col-sm-12 control" [value]="events?.info" rows="2" readonly></textarea>
+            <div class="col-sm" *ngIf="events?.eventType?.id == 1">
+              <label for="form7">ID заявки - <a class="text-primary" target="_blank" [routerLink]="[openShowEvent(events?.targetApplicationId)]">{{events?.targetApplicationId}}</a>
+              </label>
+              <textarea class="col-sm-12 control" *ngIf="events?.info" [value]="events?.info" rows="2" readonly></textarea>
             </div>
             <div class="col-sm-2">
               <div class="row">
