--- a/frontend/src/app/components/claims/claims.component.html
+++ b/frontend/src/app/components/claims/claims.component.html
@@ -58,7 +58,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm">
+          <div class="col-sm" *ngIf="true">
             <label>Дата последнего комментирования</label>
             <div class="row">
               <div class="col-sm">
