--- a/frontend/src/app/components/claims/claims.component.scss
+++ b/frontend/src/app/components/claims/claims.component.scss
@@ -57,7 +57,7 @@
   border: none;
 }
 
-.panel-header:active,.panel-header:focus,.panel-header:hover, .nav-tabs .nav-link.active, .nav-item.show .nav-link, .badge:active {
+.panel-header:active,.panel-header:focus, .nav-tabs .nav-link.active, .nav-item.show .nav-link, .badge:active {
   color: #00b2a8!important;
   border-bottom: 2px solid #00b2a8;
 }
