--- a/frontend/src/app/components/claims/claims.component.html
+++ b/frontend/src/app/components/claims/claims.component.html
@@ -1,5 +1,5 @@
 <div class="row w-100"></div>
-<div class="row" [formGroup]="applicationSearchForm">
+<div class="row" [formGroup]="applicationSearchForm" id="searchClaim">
   <div class="col-sm">
     <div class="card">
       <div class="card-header font-weight-bold bg-dark text-white">
@@ -13,7 +13,7 @@
               <mat-button-toggle-group [(ngModel)]="applicationSearchForm.operationTypeId"
                                        formControlName="operationTypeId">
                 <mat-button-toggle class="operation-type"
-                                   *ngFor="let item of operationType" [value]="item"
+                                   *ngFor="let item of operationType" [value]="item" [id]="item.code"
                                    [class]="item.value != applicationSearchForm.operationTypeId?.value ? 'bg-white text-dark' : ''"
                                    [ngClass]="{ 'color-aqua text-white':item.value === applicationSearchForm.operationTypeId?.value}">
                   {{item.label}}
@@ -100,13 +100,13 @@
                 <i class="fa fa-balance-scale fa-2x" aria-hidden="true"></i>
                 <span class="badge color-aqua ">{{numeral}}</span>
               </mat-button-toggle>
-              <mat-button-toggle class="btn btn-sm btn-outline-dark clear-btn operation-type" (click)="addEventShow()" *ngIf="this.eventObjectId.length > 0" [disabled]="this.eventObjectId?.length>15">
+              <mat-button-toggle id="addToShow" class="btn btn-sm btn-outline-dark clear-btn operation-type" (click)="addEventShow()" *ngIf="this.eventObjectId.length > 0" [disabled]="this.eventObjectId?.length>15">
                 Добавить на показ {{this.eventObjectId?.length}}
               </mat-button-toggle>
-              <mat-button-toggle class="btn btn-sm btn-outline-dark clear-btn operation-type" (click)="clearForm()">
+              <mat-button-toggle id="clearBtn" class="btn btn-sm btn-outline-dark clear-btn operation-type" (click)="clearForm()">
                 Очистить
               </mat-button-toggle>
-              <mat-button-toggle class="btn btn-sm color-aqua text-white search-btn operation-type" (click)="findClaims(1)">
+              <mat-button-toggle id="searchBtn" class="btn btn-sm color-aqua text-white search-btn operation-type" (click)="findClaims(1)">
                 <i aria-hidden="true" class="fa fa-search"></i>
                 Поиск
               </mat-button-toggle>
