--- a/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.html
+++ b/frontend/src/app/components/claims/create-claim/claim-events/claim-events.component.html
@@ -57,6 +57,10 @@
                   (click)="save(eventsDTO)">
             Сохранить
           </button>
+          <button type="button" class="btn btn-btn btn-sm btn2 btn-outline-aqua"
+                  (click)="this.clearForm()">
+            Очистить
+          </button>
         </div>
       </div>
     </div>
